--- a/Parsing_dates.ipynb
+++ b/Parsing_dates.ipynb
@@ -2943,7 +2943,17 @@
       "cell_type": "code",
       "source": [
         "#Swagat Neupane\n",
-        "# SUMMARY: The code creates a KDE plot to visualize landslide distribution based on geographic coordinates. It uses a color gradient to represent density, with darker reds indicating higher densities and lighter reds indicating fewer occurrences. The plot smooths density estimates, highlighting hotspots and identifying patterns. This visualization aids in understanding underlying causes, planning risk mitigation strategies, and focusing monitoring efforts.\n",
+        "'''\n",
+        "SUMMARY: The code creates a KDE plot to visualize landslides\n",
+        "distribution based on geographic coordinates.\n",
+        "It uses a color gradient to represent density,\n",
+        "with darker reds indicating higher densities and\n",
+        "lighter reds indicating fewer occurrences.\n",
+        "The plot smooths density estimates, highlighting hotspots and\n",
+        "identifying patterns. This visualization aids in understanding\n",
+        "underlying causes, planning risk mitigation strategies, and\n",
+        "focusing monitoring efforts.\n",
+        "'''\n",
         "plt.figure(figsize=(10, 6))\n",
         "sns.kdeplot(x=landslides['longitude'], y=landslides['latitude'], cmap=\"Reds\", shade=True, bw_adjust=0.5)\n",
         "plt.title('Density of Landslide Locations')\n",
@@ -2989,7 +2999,20 @@
       "cell_type": "code",
       "source": [
         "#Samir Khadka\n",
-        "#Summary\n",
+        "#Summary:\n",
+        "'''The code calculates the number of fatalities and injuries per\n",
+        "10,000 people for each region affected by landslides, normalizing\n",
+        "the data to make it comparable across different population sizes.\n",
+        "It then creates a scatter plot with logarithmic scales on both axes\n",
+        "to visualize the relationship between population size and casualties.\n",
+        " The red points represent fatalities per 10,000 people,\n",
+        " while the blue points represent injuries per 10,000 people.\n",
+        " Using a log scale helps to handle the wide range of population sizes,\n",
+        " compressing the data and making it easier to identify trends.\n",
+        " The plot provides insights into how casualties scale with population\n",
+        " size and can reveal regions with disproportionately high or low\n",
+        "casualty rates relative to their population size.\n",
+        "'''\n",
         "# Calculating fatalities and injuries per 10,000 population\n",
         "landslides['fatalities_per_10k'] = (landslides['fatalities'] / landslides['population']) * 10000\n",
         "landslides['injuries_per_10k'] = (landslides['injuries'] / landslides['population']) * 10000\n",
@@ -3012,7 +3035,7 @@
           "height": 463
         },
         "id": "62RdHWKaxd-d",
-        "outputId": "561b772b-13e8-4095-ddf5-c540f3d2d1c1"
+        "outputId": "f8d98768-7e91-424f-b3cb-c95aecd2dfcf"
       },
       "execution_count": null,
       "outputs": [
@@ -3031,7 +3054,7 @@
     {
       "cell_type": "code",
       "source": [
-        "volcanoes = pd.read_csv(\"volcano.csv\")"
+        "volcanoes"
       ],
       "metadata": {
         "id": "BDnzGhkmsFuZ"
@@ -3425,7 +3448,31 @@
       "cell_type": "code",
       "source": [
         " #Samir Khadka\n",
-        " #Frequency of Volcano Activity Evidence by Country\n",
+        "\n",
+        "'''The code creates a horizontal bar chart that\n",
+        "  visualizes the distribution of volcano activity\n",
+        "  evidence across the top 10 countries with the most volcanoes.\n",
+        "  The y-axis represents the countries, while the x-axis shows the\n",
+        "  count of volcanoes in each country. The bars are color-coded based\n",
+        "  on the type of activity evidence (such as active, dormant, or extinct),\n",
+        "  which is indicated by the legend. The data is ordered by the number of\n",
+        "  volcanoes in each country, focusing on the top 10 countries with the\n",
+        "  highest counts. This visualization allows for a quick comparison of\n",
+        "  volcanic activity across different countries, providing insights into\n",
+        "  which countries have the most volcanoes and how their activity status\n",
+        "  is distributed.\n",
+        "\n",
+        "  The output of this code will be a clear and informative bar chart that\n",
+        "  not only displays the number of volcanoes in each of the top 10 countries\n",
+        "  but also shows how these volcanoes are classified based on their activity\n",
+        "  evidence. This helps identify geographical patterns in volcanic activity,\n",
+        "  revealing trends about the distribution of active, dormant, and extinct\n",
+        "  volcanoes across countries. The chart can be particularly useful for\n",
+        "  understanding the global landscape of volcanic risk and activity.\n",
+        "'''\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "#Frequency of Volcano Activity Evidence by Country\n",
         "plt.figure(figsize=(12, 6))\n",
         "sns.countplot(data=volcanoes, y='Country', hue='Activity Evidence',\n",
         "              order=volcanoes['Country'].value_counts().index[:10])  # Top 10 countries by count\n",
@@ -3461,7 +3508,22 @@
       "cell_type": "code",
       "source": [
         "# Swagat Neupane:\n",
-        "#Summary: The code generates a vertical bar chart that visualizes the distribution of volcanoes across different tectonic settings. The y-axis represents the various tectonic settings, such as divergent, convergent, and transform boundaries, while the x-axis shows the count of volcanoes found in each setting. The bars are arranged in descending order based on the frequency of each tectonic setting, making it easy to identify which settings are most commonly associated with volcanoes. The chart allows for a clear comparison of the tectonic environments where volcanoes are located, providing insights into the relationship between tectonic plate movements and volcanic activity. This visualization highlights the prevalence of certain tectonic settings and helps better understand how geological processes influence volcanic distribution.\n",
+        "'''Summary: The code generates a vertical bar chart\n",
+        "that visualizes the distribution of volcanoes across\n",
+        "different tectonic settings. The y-axis represents\n",
+        "the various tectonic settings, such as divergent,\n",
+        "convergent, and transform boundaries, while the x-axis\n",
+        "shows the count of volcanoes found in each setting.\n",
+        "The bars are arranged in descending order based on the\n",
+        "frequency of each tectonic setting, making it easy to\n",
+        "identify which settings are most commonly associated with volcanoes.\n",
+        "The chart allows for a clear comparison of the tectonic environments\n",
+        "where volcanoes are located, providing insights into the relationship\n",
+        "between tectonic plate movements and volcanic activity.\n",
+        "This visualization highlights the prevalence of certain tectonic\n",
+        " settings and helps better understand how geological processes\n",
+        " influence volcanic distribution.\n",
+        " '''\n",
         "#Distribution of Tectonic Settings\n",
         "plt.figure(figsize=(10, 6))\n",
         "sns.countplot(data=volcanoes, y='Tectonic Setting', order=volcanoes['Tectonic Setting'].value_counts().index)\n",
